<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tela_response"
    android:theme="@style/Theme.RoboMarciano">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/resultcalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="23sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/title_calc"
            android:textColor="#000"
            android:textSize="23sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spiner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#BA6161"
            android:backgroundTintMode="add"
            android:clipChildren="true"
            android:clipToPadding="true"
            android:textAlignment="center"
            android:textSize="40sp">

        </Spinner>

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/number1"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="#BA6161"
                android:hint="@string/_1_n_mero"
                android:inputType="number|numberSigned|numberDecimal"
                android:padding="5dp"
                android:textSize="30sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/number2"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="#BA6161"
                android:hint="@string/_2_n_mero"
                android:inputType="number|numberSigned|numberDecimal"
                android:padding="5dp"
                android:textSize="30sp"
                android:autofillHints="" />
        </LinearLayout>

        <Button
            android:id="@+id/calcular"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="#e26161"
            android:text="@string/calcular"
            android:textSize="20sp"
            app:rippleColor="#e26161" />

        <Button
            android:id="@+id/retorno"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="#e26161"
            android:text="@string/voltar"
            android:textSize="20sp"
            app:rippleColor="#e26161" />
    </TableLayout>
</RelativeLayout>